# 3D_bounding_box_gb_visual_detection

./: .gitignore  CLUSTERING_IMPLEMENTATION.md  ENABLE_GPU.md  PERSON_TRACKING_QUICKSTART.md  QUICK_GPU_SETUP.md  QUICK_REFERENCE.md  QUICK_START_YOLOV8.md  README.md  YOLO_SELECTION_GUIDE.md  YOLO_V8_MIGRATION.md  check_gpu_usage.sh  download_weights.py  generate_architecture_diagram.py  install_cuda_and_rebuild.sh  presentation.tex  run_3d_detection.sh
src/darknet_ros/darknet/examples/: classifier.c  detector.c
src/darknet_ros/darknet/include/: darknet.h
src/darknet_ros/darknet/src/: activations.h  avgpool_layer.h  batchnorm_layer.c  batchnorm_layer.h  blas.h  col2im.h  convolutional_layer.c  convolutional_layer.h  crop_layer.h  data.c  deconvolutional_layer.h  dropout_layer.h  gemm.c  im2col.h  image.c  image.h  maxpool_layer.h  network.c  yolo_layer.c
src/darknet_ros/darknet_ros/: CMakeLists.txt
src/darknet_ros/darknet_ros/config/: ros.yaml
src/darknet_ros/darknet_ros/include/darknet_ros/: YoloObjectDetector.hpp  image_interface.h
src/darknet_ros/darknet_ros/launch/: darknet_ros.launch.py
src/darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp  image_interface.c  opencv4_compat.cpp
src/gb_visual_detection_3d/darknet_ros_3d/config/: darknet_3d.yaml
src/gb_visual_detection_3d/darknet_ros_3d/launch/: darknet_ros_3d_complete.launch.py  yolov3_3d.launch.py  yolov8_3d.launch.py
src/gb_visual_detection_3d/darknet_ros_3d/src/: darknet3d_node.cpp
src/gb_visual_detection_3d/darknet_ros_3d/src/darknet_ros_3d/: Darknet3D.cpp
src/person_speed_tracker/: CMakeLists.txt  README.md  USAGE.md  package.xml
src/person_speed_tracker/config/: tracker_params.yaml
src/person_speed_tracker/launch/: person_speed_tracker.launch.py  person_tracking_complete.launch.py  person_tracking_system.launch.py
src/person_speed_tracker/src/: person_speed_tracker_node.cpp
src/person_tracker/: CMakeLists.txt  package.xml
src/person_tracker/config/: clustering_params.yaml  tracker_params.yaml
src/person_tracker/include/person_tracker/: human_clusterer.hpp  kalman_filter.hpp
src/person_tracker/launch/: person_tracker.launch.py  person_tracking_complete.launch.py
src/person_tracker/msg/: HumanCluster.msg  HumanClusterArray.msg  PersonInfo.msg  PersonInfoArray.msg
src/person_tracker/rviz/: person_tracking.rviz
src/person_tracker/src/: human_clusterer.cpp  person_tracker_node.cpp  person_tracker_visualizer.cpp
src/ultralytics_ros/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
src/ultralytics_ros/config/: yolov11l.yaml  yolov11m.yaml  yolov11n.yaml  yolov11s.yaml  yolov11x.yaml  yolov8l.yaml  yolov8m.yaml  yolov8n.yaml  yolov8s.yaml  yolov8x.yaml
src/ultralytics_ros/launch/: yolo_detector.launch.py  yolov11m.launch.py  yolov8m.launch.py  yolov8n.launch.py
src/ultralytics_ros/ultralytics_ros/: __init__.py  yolo_detector_node.py
